@@ -1,6 +1,13 @@
 2005-09-13  Richard A. Stellingwerff  <remenic@gmail.com>
 
 	* engines/clearlooks/src/clearlooks_draw.c:
+	(clearlooks_draw_button), (clearlooks_draw_entry): Slightly more contrast.
+	* engines/clearlooks/src/clearlooks_style.c: (draw_handle): Properly
+	handle orientation.
+
+2005-09-13  Richard A. Stellingwerff  <remenic@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw.c:
 	(clearlooks_draw_inset), (clearlooks_draw_button),
 	(clearlooks_draw_entry), (clearlooks_draw_scale_trough),
 	(clearlooks_draw_progressbar_trough):
